--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(@post) do |f| %>
+<div class="col-lg-12 col-md-12">
+<%= form_for(@post,:class=>'form') do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -11,24 +12,24 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title,:class=>'form-control',:placeholder=>'Enter title' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description,:class=>'form-control',:placeholder=>'Enter description' %>
   </div>  
-  <div class="field">
+  <div class="form-group">
     <%= f.label :categories %><br>    
     <%= select_tag "parent_category", options_from_collection_for_select(Category.parent_categories, :slug,:name),:onchange => "populate_sub_categories(this.value)" %>
     <%= f.select('category_slug',[]) %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Submit",:class=>'btn btn-primary'%>
   </div>
 <% end %>
-
+</div>
 <script type="text/javascript">
 function fetch_sub_categories(id)
 {
