--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New post</h1>
+<div class="page-header">
+  <h4>New Post
+    <%= link_to 'Back', posts_path,:class=>'pull-right btn btn-primary btn-sm' %>    
+  </h4>
+
+</div>
+
 
 <%= render 'form' %>
 
-<%= link_to 'Back', posts_path %>
