--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,58 @@
-<h2>Sign up</h2>
+<div class="col-lg-offset-3 col-md-offset-3 col-lg-6 col-md-6">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<div class="panel panel-default margin-top-lg">
+  <div class="panel-heading"><h3 class="panel-title">Sign Up</h3></div>
+  <div class="panel-body">
+    
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
   
-  <div class="field">
+  <div class="form-group">
     <%= f.label "Employee ID" %><br />
-    <%= f.text_field :employee_id, autofocus: true  %>
+    <%= f.text_field :employee_id, autofocus: true,:class=>"form-control"  %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
+    <%= f.label "First Name" %><br />
+    <%= f.text_field :first_name,:class=>"form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label "Last Name" %><br />
+    <%= f.text_field :last_name,:class=>"form-control" %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :email %><br />
-    <%= f.email_field :email %>
+    <%= f.email_field :email,:class=>"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :password %>
     <% if @validatable %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "off",:class=>"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off",:class=>"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label "Invite Code" %><br />
-    <%= f.text_field :sign_up_code %>
+    <%= f.text_field :sign_up_code,:class=>"form-control" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="form-group text-center">
+    <%= f.submit "Sign up",:class=>'btn btn-primary' %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="col-lg-12 col-md-12 text-center">
+<%= link_to "Existing User?","/users/sign_in" %>
+</div>
+</div>
+ </div>
+</div>
