--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -2,18 +2,28 @@
 <html>
 <head>
   <title>Elearning</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>  
+  
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>  
 </head>
 <body>
-<div class="container">
-	<div class="col-lg-12 col-md-12">
-		<%= yield %>
-	</div>
+<div class="navbar navbar-default">  
+      <a class="navbar-brand" href="/">E-learning</a>
 </div>
+
+
+	
+		<%= yield %>
+	
+
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+$( document ).ready(function() {
+	$('.loginBackground').height($( window ).height());
+});
+</script>
 </body>
 </html>
