--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,26 +1,54 @@
-<h1>Listing categories</h1>
+<div class="page-header">
+  <h4>Categories
+    <%= link_to 'New Category', new_category_path,:class=>'pull-right btn btn-primary btn-sm' %>    
+  </h4>
 
-<table>
-  <thead>
-    <tr>
-      <th>References</th>
-      <th>String</th>
-      <th>String</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+</div>
+<div class="col-lg-10 col-md-10 list-group">
+    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
-  <tbody>
     <% @categories.each do |category| %>
-      <tr>
-        <td><%= link_to category.name, category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <div class="col-lg-12 col-md-12 margin-bottom-sm ">
+    <div class="panel panel-default">
+    <div class="panel-heading" role="tab">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse_<%= category.id %>" aria-expanded="true" aria-controls="collapseOne">
+          <p><i class="fa fa-list"></i> 
+            <%= "#{category.name}" %>
+            <span class="count">(<%= "#{category.posts_count}" %>)</span>
+          </p>
+        </a>
+      </h4>
+    </div>
+    <div id="collapse_<%= category.id %>" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+      <div class="panel-body">
+        <% category.sub_categories.each do |sub_category| %>
+        <p><i class="fa fa-arrow-right"></i> 
+        <a href="<%= category_path(sub_category) %>">
+          <%= "#{sub_category.name}" %>
+          <span class="count">(<%= "#{sub_category.posts_count}" %>)</span>
+        </a></p>
+        <% end %>
+        
+      </div>
+    </div>
+  </div>
+  </div>
+<% end %>
 
-<br>
-
-<%= link_to 'New Category', new_category_path %>
+</div>
+</div>
+<div class="col-lg-2 col-md-2 paddingReset">
+<div class="text-center">
+  <h4>Popular Categories</h4>
+</div>
+<hr>
+<ul class="list-unstyled">
+<% @popular_categories.each do |cat_id,count| %>
+<% if count>0 %>
+  <% cat=Category.find(cat_id) %>
+  <li class="margin-left-sm margin-top-sm"><i class="fa fa-star-o"></i> <%= link_to "#{cat.name} (#{count})",cat %></li>
+<% end %>
+<% end %>
+</ul>
+</div>
