--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,7 +18,7 @@
   </div>
   <div class="form-group">
     <%= f.label :description %><br>
-    <%= f.text_area :description,:class=>'form-control',:placeholder=>'Enter description' %>
+    <%= f.text_area :description,:class=>'form-control tinymce' %>
   </div>  
   <div class="form-group">
     <%= f.label :categories %><br>    
