--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h4>New Post
+  <h4>Edit Post
     <%= link_to 'Back', @post,:class=>'pull-right btn btn-primary btn-sm' %>    
   </h4>
 
