--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,16 +3,20 @@
 		<%= link_to 'Edit', edit_post_path(@post),:class=>'pull-right btn btn-primary btn-sm  margin-left-sm' %>		
 		<%= link_to 'Back', posts_path,:class=>'pull-right btn btn-primary btn-sm' %>		
 	</h4>
+	
+	<div class="text-muted small margin-top-sm">by <%= link_to @post.user.full_name,@post.user %> <%= time_ago_in_words(@post.created_at, include_seconds: true) %> ago
+	</div>
+	<div class="margin-top-sm">
+		<i class="fa fa-folder-open"></i> 
+		<%= link_to @post.category.parent.name,@post.category.parent %>
+		<i class="fa fa-caret-right"></i>
+		<%= link_to @post.category.name,@post.category %>	
+	</div>
+</div>
 
-</div>
-<div>
-<%= @post.title %>
-</div>
-<div>
+<div class="col-lg-12 col-md-12 post-desc">
 <%=raw @post.description %>
 </div>
-<div>
-<%= @post.category.parent.name %> > <%= @post.category.name %>
-</div>
+
 
 
