--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New category</h1>
+<div class="page-header">
+  <h4>New Category
+    <%= link_to 'Back', categories_path,:class=>'pull-right btn btn-primary btn-sm' %>    
+  </h4>
+
+</div>
+
 
 <%= render 'form' %>
-
-<%= link_to 'Back', categories_path %>
