--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(@category) do |f| %>
+<div class="col-lg-12 col-md-12">
+<%= form_for(@category,:class=>'form') do |f| %>
   <% if @category.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@category.errors.count, "error") %> prohibited this category from being saved:</h2>
@@ -11,32 +12,37 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
+  <div class="col-lg-4 col-md-4 paddingReset">
+    <div class="form-group">
+      <%= f.label :name %><br>
+      <%= f.text_field :name,:class=>'form-control',:placeholder=>'Enter category name' %>
+    </div>
 
-  <strong>Sub Categories</strong>
-  <div>
-    <a href='#' id='add-category'>Add</a>
-    <ul id="sub_categories">
+  
+
+  <label>Sub Categories</label>
+  
+    <a href='#' id='add-category' class='pull-right'>Add sub category</a>
+    <ul id="sub_categories" class="list-unstyled">
       <% if @sub_categories %>
       <% @sub_categories.each do |sub_category| %>
-        <li><%= text_field_tag "category[sub_categories_update][name][]",sub_category.name %></li>
+        <li><%= text_field_tag "category[sub_categories_update][name][]",sub_category.name,:class=>'form-control margin-top-sm',:placeholder=>'Enter sub category name' %></li>
         <%= hidden_field_tag "category[sub_categories_update][slug][]",sub_category.slug %>
       <% end %>
       <% else %>
-      <li><%= text_field_tag "category[sub_categories_create][name][]",nil %></li>
+      <li><%= text_field_tag "category[sub_categories_create][name][]",nil,:class=>'form-control margin-top-sm',:placeholder=>'Enter sub category name' %></li>
       <% end %>
     </ul>
-  </div>
+  
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Submit",:class=>'btn btn-primary' %>
   </div>
 <% end %>
+</div>
+</div>
 <script type="text/javascript">
   $( "#add-category" ).click(function() {    
-  $("#sub_categories").append("<li><input type='text' name='category[sub_categories_create][name][]' id='category_sub_categories_create_name_'></li>");
+  $("#sub_categories").append("<li><input type='text' name='category[sub_categories_create][name][]' placeholder='Enter sub category name' class='form-control margin-top-sm' id='category_sub_categories_create_name_'></li>");
   });
 </script>
