--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -6,7 +6,7 @@
 </div>
 <div class="col-lg-10 col-md-10 list-group">
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-
+    <% if !@categories.empty? %>  
     <% @categories.each do |category| %>
     <div class="col-lg-12 col-md-12 margin-bottom-sm ">
     <div class="panel panel-default">
@@ -34,10 +34,16 @@
     </div>
   </div>
   </div>
+  <% end %>
+<% else %>
+No categories yet
 <% end %>
 
 </div>
+
+
 </div>
+<% if !@popular_categories.empty? %>
 <div class="col-lg-2 col-md-2 paddingReset">
 <div class="text-center">
   <h4>Popular Categories</h4>
@@ -52,3 +58,4 @@
 <% end %>
 </ul>
 </div>
+<% end %>
