--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,17 @@
 
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<%= tinymce %>
+<%#= tinymce %>
+<script type="text/javascript">
+$(document).ready(function() {
+	tinymce.init({
+	mode: 'textareas',
+	relative_urls : false,
+	remove_script_host : false,
+	convert_urls : false,
+	plugins: 'uploadimage,table,fullscreen'	
+});
+});
+</script>
 </body>
 </html>
